--- a/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -849,5 +849,8 @@
         <put-attribute name="body"
                        value="/WEB-INF/views/approvebudget/approvebudget-searchACMC.jsp"/>
     </definition>   
-    
+    <definition name="expensebill-update-Workflow" extends="base_layout_expense_form">
+        <put-attribute name="page-title" value="title.expensebill.create" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/expensebill/expensebill-update-Workflow.jsp"/>
+    </definition> 
 </tiles-definitions>
