--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -1509,11 +1509,11 @@ label.error {
   border-right-style: solid;
   border-bottom-style: solid;
   font-family: semibold;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: bold;
-  color: #767676;
+  color: #ffffff;
   padding: 4px;
-  background-color: #f8f8f8;
+  background-color: #265988;
   background-image: none;
   text-align: center;
 }
