--- a/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -52,17 +52,15 @@
 <tiles-definitions>
 
     <definition name="base_layout" template="/WEB-INF/views/template/main.jsp">
-        <put-attribute name="title" value="eGov Urban Portal"/>
+        <put-attribute name="title" value=""/>
         <put-attribute name="header" value="/WEB-INF/views/template/header.jsp"/>
         <put-attribute name="body" value=""/>
-        <put-attribute name="footer" value="/WEB-INF/views/template/footer.jsp"/>
     </definition>
 
     <definition name="error" template="/WEB-INF/views/template/error.jsp">
         <put-attribute name="page-title" value="title.error.page" cascade="true"/>
         <put-attribute name="header" value="/WEB-INF/views/template/header.jsp"/>
         <put-attribute name="body" value=""/>
-        <put-attribute name="footer" value="/WEB-INF/views/template/footer.jsp"/>
     </definition>
 
     <definition name="error/*" extends="error">
@@ -327,6 +325,24 @@
     <definition name="edit-estimate-form" extends="base_layout">
         <put-attribute name="page-title" value="title.estimate.edit" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/estimatepreparationapproval/editestimate.jsp"/>
+    </definition>
+    <definition name="works-success" extends="base_layout">
+        <put-attribute name="page-title" value="title.estimate.edit" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/estimatepreparationapproval/works-success.jsp"/>
+    </definition>
+    <definition name="create-estimate-form" extends="base_layout">
+        <put-attribute name="page-title" value="title.estimate.preparation.create" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/estimatepreparationapproval/createestimate.jsp"/>
+    </definition>
+    
+    <definition name="view-tender-form" extends="base_layout">
+        <put-attribute name="page-title" value="title.tender.view" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/tender/viewtender.jsp"/>
+    </definition>
+    
+    <definition name="view-bg-security-form" extends="base_layout">
+        <put-attribute name="page-title" value="title.tender.view" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/bgSecurity/viewbgsecurity.jsp"/>
     </definition>
 
 </tiles-definitions>
