--- a/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -319,7 +319,7 @@
     
     <definition name="view-estimate-form" extends="base_layout">
         <put-attribute name="page-title" value="title.estimate.view" cascade="true"/>
-        <put-attribute name="body" value="/WEB-INF/views/estimatepreparationapproval/viewestimate.jsp"/>
+        <put-attribute name="body" value="/WEB-INF/views/estimatepreparationapproval/viewsearchestimate.jsp"/>
     </definition>
     
     <definition name="edit-estimate-form" extends="base_layout">
@@ -359,6 +359,10 @@
         <put-attribute name="page-title" value="lbl.work.view" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/boq/viewworkagreement.jsp"/>
     </definition>
+    <definition name="view-work-agreement-closure" extends="base_layout">
+        <put-attribute name="page-title" value="lbl.work.view" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/boq/viewworkagreementClosure.jsp"/>
+    </definition>
     
     <definition name="search-work-agreement-form" extends="base_layout">
         <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
@@ -370,6 +374,7 @@
         <put-attribute name="body" value="/WEB-INF/views/boq/editworkagreement.jsp"/>
     </definition>
     
+    
     <definition name="closure-work-agreement" extends="base_layout">
         <put-attribute name="page-title" value="lbl.work.closure" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/boq/closureedit.jsp"/>
@@ -378,6 +383,10 @@
     <definition name="search-closure-work-agreement-form" extends="base_layout">
         <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/boq/closuresearch.jsp"/>
+    </definition>
+    <definition name="search-closure-work-agreement-page-form" extends="base_layout">
+        <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/boq/closuresearchPage.jsp"/>
     </definition>
     
     <definition name="edit-measured-quantity-work-agreement" extends="base_layout">
