--- a/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-worksweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -363,6 +363,10 @@
         <put-attribute name="page-title" value="lbl.work.view" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/boq/viewworkagreementClosure.jsp"/>
     </definition>
+    <definition name="view-work-agreement-progress" extends="base_layout">
+        <put-attribute name="page-title" value="lbl.work.view" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/boq/viewworkagreementProgress.jsp"/>
+    </definition>
     
     <definition name="search-work-agreement-form" extends="base_layout">
         <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
@@ -387,6 +391,14 @@
     <definition name="search-closure-work-agreement-page-form" extends="base_layout">
         <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/boq/closuresearchPage.jsp"/>
+    </definition>
+    <definition name="search-mis-work-agreement-page-form" extends="base_layout">
+        <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/boq/missearchPage.jsp"/>
+    </definition>
+    <definition name="search-progress-work-agreement-page-form" extends="base_layout">
+        <put-attribute name="page-title" value="lbl.work.search" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/boq/boqProgress.jsp"/>
     </definition>
     
     <definition name="edit-measured-quantity-work-agreement" extends="base_layout">
